apps/otel/otel_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - path: /otel
          pathType: Prefix
          backend:
            service:
              name: otel-demo
              port:
                number: 4317
